# serializer version: 1
# name: test_car_sensors[sensor.qs_test_car_car_best_power_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'car Test Car Power Consumption',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_best_power_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_car_autonomy_to_target_soc_km-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'distance',
      'friendly_name': 'car Test Car Autonomy to Target SOC (km)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_car_autonomy_to_target_soc_km',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_car_charge_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Car Charge ETA',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_car_charge_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_car_charge_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Car Charge Type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_car_charge_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_car_estimated_range_km-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'distance',
      'friendly_name': 'car Test Car Estimated Range (km)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_car_estimated_range_km',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_car_soc_percentage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'battery',
      'friendly_name': 'car Test Car Current Charge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_car_soc_percentage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_current_constraint_car-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Car Next Charge',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_current_constraint_car',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_current_constraint_current_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'energy',
      'friendly_name': 'car Test Car Constraint Current Energy',
      'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_current_constraint_current_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_device_information_storage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Car None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_device_information_storage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_load_current_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Car Load Current Command',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_load_current_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_car_sensors[sensor.qs_test_car_car_qs_car_person_forecast-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Car None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_car_car_qs_car_person_forecast',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_charger_generic_best_power_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'charger Test Charger Power Consumption',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_charger_generic_best_power_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_charger_generic_current_constraint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'charger Test Charger Next Charge',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_charger_generic_current_constraint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_charger_generic_current_constraint_current_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'energy',
      'friendly_name': 'charger Test Charger Constraint Current Energy',
      'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_charger_generic_current_constraint_current_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_charger_generic_current_constraint_current_percent_completion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'charger Test Charger Constraint % completion',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_charger_generic_current_constraint_current_percent_completion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_charger_generic_current_constraint_current_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'charger Test Charger Constraint Current Value',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_charger_generic_current_constraint_current_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_charger_generic_device_information_storage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'charger Test Charger None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_charger_generic_device_information_storage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_charger_generic_load_current_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'charger Test Charger Load Current Command',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_charger_generic_load_current_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_generic_car_car_best_power_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'car Test Charger generic car Power Consumption',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_generic_car_car_best_power_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_generic_car_car_car_charge_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Charger generic car Charge ETA',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_generic_car_car_car_charge_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_generic_car_car_car_charge_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Charger generic car Charge Type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_generic_car_car_car_charge_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_generic_car_car_current_constraint_car-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Charger generic car Next Charge',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_generic_car_car_current_constraint_car',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_generic_car_car_current_constraint_current_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'energy',
      'friendly_name': 'car Test Charger generic car Constraint Current Energy',
      'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_generic_car_car_current_constraint_current_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_generic_car_car_device_information_storage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Charger generic car None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_generic_car_car_device_information_storage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_generic_car_car_load_current_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Charger generic car Load Current Command',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_generic_car_car_load_current_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_charger_sensors[sensor.qs_test_charger_generic_car_car_qs_car_person_forecast-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'car Test Charger generic car None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_charger_generic_car_car_qs_car_person_forecast',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_device_information_storage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'home Test Home None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_device_information_storage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_home_available_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_home_extra_available_power',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_home_available_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_home_consumption-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_home_consumption_power',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_home_consumption',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_home_non_controlled_consumption-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_home_non_controlled_consumption_power',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_home_non_controlled_consumption',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_load_current_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'home Test Home Load Current Command',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_load_current_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_no_control_forecast_15mn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_no_control_forecast_15mn',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_no_control_forecast_15mn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_no_control_forecast_1h-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_no_control_forecast_1h',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_no_control_forecast_1h',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_no_control_forecast_30mn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_no_control_forecast_30mn',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_no_control_forecast_30mn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_no_control_forecast_3h-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_no_control_forecast_3h',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_no_control_forecast_3h',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_no_control_forecast_6h-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_no_control_forecast_6h',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_no_control_forecast_6h',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_no_control_forecast_now-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_no_control_forecast_now',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_no_control_forecast_now',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_solar_forecast_15mn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_solar_forecast_15mn',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_solar_forecast_15mn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_solar_forecast_1h-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_solar_forecast_1h',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_solar_forecast_1h',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_solar_forecast_30mn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_solar_forecast_30mn',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_solar_forecast_30mn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_solar_forecast_3h-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_solar_forecast_3h',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_solar_forecast_3h',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_home_sensors[sensor.qs_test_home_home_qs_solar_forecast_6h-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'device_class': 'power',
      'friendly_name': 'qs_solar_forecast_6h',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_home_home_qs_solar_forecast_6h',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_person_sensors[sensor.qs_test_person_person_device_information_storage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'person Test Person None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_person_person_device_information_storage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_person_sensors[sensor.qs_test_person_person_load_current_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'person Test Person Load Current Command',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_person_person_load_current_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_person_sensors[sensor.qs_test_person_person_person_mileage_prediction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by QuietSolarAbstraction',
      'friendly_name': 'person Test Person Predicted Next Day Mileage (km)',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.qs_test_person_person_person_mileage_prediction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
